--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <!-- Google tag (gtag.js) -->
+    <!-- Google tag (gtag.js) -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-LXQQC7PBH3"
+      src="https://www.googletagmanager.com/gtag/js?id=G-RML4PFL57J"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -13,7 +14,7 @@
       }
       gtag("js", new Date());
 
-      gtag("config", "G-LXQQC7PBH3");
+      gtag("config", "G-RML4PFL57J");
     </script>
     <meta charset="utf-8" />
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
